Expanded Cheat Menu:
### Fixed:
- Possibly fixing AddOrbitalProbes.

Mods:

A bunch of PlaceObject to PlaceObjectIn.

Fix Rocket Stuck 2.1:
Made it always use MainCity instead of UICity.

MicroG Extractor Resource 0.2:
If no deposit of selected resource, then change to any resource.

RC Miner 3.1:
Added minerals to UI.
Locked rover behind printing tech.

Triboelectric Sensor Tower 1.0:
Fixed tower not showing up in cargo on saved games without the mod.

github@choggi.org

--- a/Mods ChoGGi/Fix Deposits Wrong Map/changes.txt
+++ b/Mods ChoGGi/Fix Deposits Wrong Map/changes.txt
@@ -1,3 +1,9 @@
+v0.5
+Nevermind.
+
+v0.4
+Forgot a func from my lib (thanks ve2dmn).
+
 v0.3
 Found where the bug happens, so no more need to apply mod option to move them.
 
