Expanded Cheat Menu: ### Changed: - FlushLogConstantly is is slightly faster.
Lib:
- An old picard fix for log spam was skipping some Path Markers underground.

Mods:

Construction Show Max Radius Range 1.5:
Added drone hub range.

Play All Mysteries 0.9:
Commented out code that is probably causing crash (hopefully it isn't something else...).

RC Dozer Auto Clear Rubble 0.2:
Fixed unreachable rubble.
locked tunnels behind tech.

github@choggi.org

--- a/Mods ChoGGi/Play All Mysteries/changes.txt
+++ b/Mods ChoGGi/Play All Mysteries/changes.txt
@@ -1,3 +1,6 @@
+v0.9
+Commented out code that is probably causing crash (hopefully it isn't something else...).
+
 v0.8
 Fixed crash from last update.
 
