Expanded Cheat Menu: ### Changed: - Limited Export CSV>Map Data (Breakthroughs) to 12 (safe number). - Mod Upload will upload to steam/paradox. - Holding down Entity Spawner key will only open one dialog.
Mods:

Meteoroid Deposits 0.8:
Log spam.

RC Driller Cheats 0.5:
Log spam.

Surface Concrete:
Surface deposits of concrete spawn around actual deposits for some quick concrete without mining.
This will let you see where concrete is before scanning for it.

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 "ID", "Text", "Translation"
-302535920001381, ""
-302535920001662, ""
 302535920001663, ""
 302535920001664, ""
 302535920001665, ""
@@ -1731,7 +1729,9 @@ Move archive to ""Mod folder/Pack/ModContent.hpk"""
 302535920001510, "Paradox mods platform: Leave checked to upload to Desktop only or uncheck to upload to Desktop and Console.
 If you have a uuid in your metadata.lua this checkbox is ignored and it'll try the any uuid then the desktop uuid."
 302535920001506, "Steam"
-302535920001507, "Uncheck to upload to Paradox mods (instead of Steam)."
+302535920001381, "Mod <ModLabel> will be uploaded to Steam/Paradox"
+302535920001662, "Upload to Paradox Mods"
+302535920001507, "Upload to Steam Workshop"
 302535920001485, "Does everything other than uploading mod to workshop (see AppData/ModUpload)."
 302535920001481, "Show Startup Ticks"
 302535920001482, "Prints to console how many ticks it takes the map to load."
