--- a/Mods ChoGGi/Random Starting Sector/changes.txt
+++ b/Mods ChoGGi/Random Starting Sector/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Changed default mod options to make the sector proper random.
+
 v0.3
 Fixed issue with no rockets/probes (thanks nights99).
 
