--- a/Mods ChoGGi/Meteoroid Deposits/todo.txt
+++ b/Mods ChoGGi/Meteoroid Deposits/todo.txt
@@ -1,2 +1,5 @@
+max amount limit
+
+
 [WPS] Lonesamurai 3 hours ago 
 would be fun if this dropped super sized polymer 'roids that might be comparable to a deposit or even just half/quarter of a deposit and that could be mod optionable
