--- a/Mods ChoGGi/Fix BB Bugs/changes.txt
+++ b/Mods ChoGGi/Fix BB Bugs/changes.txt
@@ -1,3 +1,8 @@
+v0.6
+Resupply items.
+Clearing waste rock.
+Elevator prefabs.
+
 v0.5
 Removed some fixes from mod added to Below & Beyond Content Update #2 - Hotfix 3:
 Stuck notifications for last war.
