Expanded Cheat Menu:
### Fixed:
- Unlimited Connection Length ignored tunnels (Thanks McKaby).

Mods:

Construction Show Max Radius Range 1.7:
Shows maxed range for tribby when changed with ECM.

Distributed Drone Assembly 2 0.3:
Underground should be working now.

Fix Bugs 0.9:
Changed a UICity to self.city.
Cleaned up comments.

Ignorant Meteor Defence 0.3:
Ignore No Buildings: Meteors that land away from buildings are ignored (units are a dice roll).
Mod name changed to Ignorant Meteor Defence.

MicroG Extractor Resource 0.3:
No Power: Newly placed Micro-G Extractors don't need power (default off).

github@choggi.org

--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,7 @@
+v0.9
+Changed a UICity to self.city.
+Cleaned up comments.
+
 v0.8
 Problem updating supply grid.
 Colonist residences checking wrong city.
