Expanded Cheat Menu:
### Fixed:
- Fixed issue when using Chinese lang.

Mods:

Notification Pause 1.6:
Fixed bug with 1.5 (thanks SoftwareSimian).

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1730,8 +1730,8 @@ Move archive to ""Mod folder/Pack/ModContent.hpk"""
 If you have a uuid in your metadata.lua this checkbox is ignored and it'll try the any uuid then the desktop uuid."
 302535920001506, "Steam"
 302535920001381, "Mod <ModLabel> will be uploaded to Steam/Paradox"
-302535920001662, "Upload to Paradox Mods"
-302535920001507, "Upload to Steam Workshop"
+302535920001662, "Upload to Paradox Mods."
+302535920001507, "Upload to Steam Workshop."
 302535920001485, "Does everything other than uploading mod to workshop (see AppData/ModUpload)."
 302535920001481, "Show Startup Ticks"
 302535920001482, "Prints to console how many ticks it takes the map to load."
