--- a/Mods ChoGGi/More Keybinds/todo.txt
+++ b/Mods ChoGGi/More Keybinds/todo.txt
@@ -1,1 +1,2 @@
-refab key (Ameba)
+dialogs 1,2,3,4 (Royal_Outrageous)
+https://www.reddit.com/r/SurvivingMars/comments/tjl66w/unbind_1234_hotkeys_popup/
