--- a/Mods ChoGGi/Ignorant Meteor Defence/changes.txt
+++ b/Mods ChoGGi/Ignorant Meteor Defence/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Log spam.
+
 v0.3
 Ignore No Buildings: Meteors that land away from buildings are ignored (units are a dice roll).
 Mod name changed to Ignorant Meteor Defence.
