--- a/Mods ChoGGi/Wide Area Forestation/changes.txt
+++ b/Mods ChoGGi/Wide Area Forestation/changes.txt
@@ -1,3 +1,6 @@
+v0.5
+Lowered the default range to 150.
+
 v0.4
 Plant Interval option wasn't working correctly.
 Applying mod options again is needed to update existing plants.
