Expanded Cheat Menu:
### Changed:
- Added manual setting: SkipModUploadConfirmDoneMsgs: Stops mod upload from asking are you sure and done msgs.

Mods:

Disable Achievements 0.3:
Packed bug fix.

Fix Bugs 1.6:
Drone log spam from elevators (could be mod related, thanks April13).

More Keybinds 1.0:
Fixed notifications not working (Thanks YertyL).

RC Dozer Auto Clear Rubble 0.4:
Help with gc.

Remove Console Dome Cap 0.2:
Packed bug fix.

github@choggi.org

--- a/Mods ChoGGi/More Keybinds/changes.txt
+++ b/Mods ChoGGi/More Keybinds/changes.txt
@@ -1,3 +1,6 @@
+v1.0
+Fixed notifications not working (Thanks YertyL).
+
 v0.9
 Added binds for speed keys.
 Added binds for changing 1,2,3,4 in storybits/etc?
