Expanded Cheat Menu:
### Fixed:
- Mod options didn't hide menu items (thanks Stryth).
- Enable ECM shortcut didn't work (thanks Stryth).

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1778,7 +1778,7 @@ For any issues; please report them to my Github/Steam/NexusMods page, or email <
 302535920000875, "Game Functions"
 302535920000465, "Disables menu, cheat panel, and hotkeys, but leaves settings intact. You'll need to manually re-enable in settings file, or check key bindings for Disable ECM.
 
-<color ChoGGi_green>Ctrl-Shift-0</color> to re-enable, or see Game options>Key bindings for the re-enable key."
+<color ChoGGi_green>Ctrl-Alt-0</color> to re-enable, or see Game options>Key bindings for the re-enable key."
 302535920001025, "Help! I'm with stupid!"
 302535920001014, "Hide Cheats Menu"
 302535920001019, "This will hide the Cheats menu; Use F2 to see it again."
