--- a/Mods ChoGGi/Applicants Age/changes.txt
+++ b/Mods ChoGGi/Applicants Age/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Fixed inf loop from age traits (thanks Tremualin).
+
 v0.3
 Mod option to remove applicants over a certain age (default none).
 
