--- a/Mods ChoGGi/Idiocracy 2/todo.txt
+++ b/Mods ChoGGi/Idiocracy 2/todo.txt
@@ -1,6 +1,9 @@
 mission goals:
 produce 1,000 machine parts" with no reward. 
 
+ produce 500 or more babies would fit better :) 
+
+
 build 10 drones: break one rover
 farm x amount food: water tank drained
 explode fuel
