Expanded Cheat Menu:
### Removed:
- Mystery Log: Use SkiRich's Sherlock mod instead (it's nicer anyways).

Mods:

Fix Bugs 2.2:
Log spam (thanks Tremualin).
v2.1
Removed fix:
Newly constructed domes birth rate (thanks Athenium).

github@choggi.org

--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,10 @@
+v2.2
+Log spam (thanks Tremualin).
+
+v2.1
+Removed fix:
+Newly constructed domes birth rate (thanks Athenium).
+
 v2.0
 Added my mod Fix No Power Dome Buildings
 
