Expanded Cheat Menu:
- Mod upload sucsess msg is clearer.

Mods:

Canadian Space Agency 2 0.7"
Made martian born sponsor goal easier.

Change Lightmodel 0.4:
Added logging for weird lightmodel?

MicroG Extractor Resource 0.4:
Log spam.

RC Transport Cheats 0.5:
Hopefully fixed looping waste rocks...

github@choggi.org

--- a/Mods ChoGGi/Canadian Space Agency 2/changes.txt
+++ b/Mods ChoGGi/Canadian Space Agency 2/changes.txt
@@ -1,3 +1,6 @@
+v0.7
+Made martian born sponsor goal easier.
+
 v0.6
 Fixed drones not showing up in resupply (The name only shows Drones not Flying Drones...).
 
