--- a/Mods ChoGGi/Translate Cheats Pane/Locales/SChinese.csv
+++ b/Mods ChoGGi/Translate Cheats Pane/Locales/SChinese.csv
@@ -1,5 +1,6 @@
-ID,text,Translation
-85947360000000, "Despawn", "删除",,,,,
-85947360000001, "Empty", "清空",,,,,
-85947360000002, "Fill", "填充",,,,,
-85947360000003, "Scan", "扫描",,,,,
+ID, text, Translation
+85947360000000, "Despawn", "删除"
+85947360000001, "Empty", "清空"
+85947360000002, "Fill", "填充"
+85947360000003, "Scan", "扫描"
+
