Expanded Cheat Menu:
### Added:
- Menu>Game>UI>Infopanel Toolbar Constrain: Limits size of infopanel toolbar buttons for those that have too many buttons (and they go off panel).

github@choggi.org

--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 "ID", "Text", "Translation"
-302535920001665, ""
-302535920001666, ""
 302535920001667, ""
 302535920001668, ""
 302535920001669, ""
@@ -1543,6 +1541,8 @@ Takes less then a second on a map with 3616 buildings and 54 drone hubs."
 302535920000620, "If any colonists are black cubes click this."
 302535920000621, "Align All Buildings To Hex Grid"
 302535920000622, "If you have any buildings that aren't aligned to the hex grids use this."
+302535920001665, "Infopanel Toolbar Constrain"
+302535920001666, "Limits size of infopanel toolbar buttons for those that have too many buttons (and they go off panel)."
 302535920001258, "Cleans your Mars of alien shrubbery."
 302535920001259, "Delete Bushes Trees"
 302535920000483, "Centuple"
