Expanded Cheat Menu:
### Changed:
- Cheats>Trigger fireworks now works on all maps.

Mods:

Allow BB Buildings 0.8:
Fixed issue with Russian lang.
v0.7
Hopefully good for modded buildings now.

RC Garage 1.2:
Possible crash issue? (Thanks McKaby).

RC Transport Cheats 0.8:
Log spam.

github@choggi.org

--- a/Mods ChoGGi/Allow BB Buildings/changes.txt
+++ b/Mods ChoGGi/Allow BB Buildings/changes.txt
@@ -1,3 +1,9 @@
+v0.8
+Fixed issue with Russian lang.
+
+v0.7
+Hopefully good for modded buildings now.
+
 v0.6
 Add mod options to selectively unlock buildings.
 
