--- a/Mods ChoGGi/Faster UI/changes.txt
+++ b/Mods ChoGGi/Faster UI/changes.txt
@@ -1,3 +1,6 @@
+v0.4
+Added mod options for each speed up.
+
 v0.3
 Fixed issue on load game by changing to a safer method of fast pins (Thanks McKaby).
 
