--- a/Mods ChoGGi/Construction Show Buildable Grid/changes.txt
+++ b/Mods ChoGGi/Construction Show Buildable Grid/changes.txt
@@ -1,3 +1,6 @@
+v0.5
+Disabled grid when placing geoscape dome (thanks boywithumbrella).
+
 v0.4
 Added keybind toggle (it'll work even if mod is disabled in mod options).
 
