--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,9 @@
+v2.5
+Added mod options to re-enable certain cheesing fixes.
+Added my mods:
+Fix Stuck Malfunctioning Drones At DroneHub (also updated it properly for multiple cities).
+Fix Dust Devils Block Building: Includes mod option to disable.
+
 v2.4
 Stop ceiling/floating rubble (thanks clampi).
 
