--- a/Mods ChoGGi/Infobar More Info/todo.txt
+++ b/Mods ChoGGi/Infobar More Info/todo.txt
@@ -3,3 +3,5 @@ figure out that food info request and where I bookmarked it
 death count, or split by natural/unnatural?
 
 add buildings using main resources to infobar?
+
+change ShowResourceWarningMsg to show which map instead of only checking active
