--- a/Mods ChoGGi/Fix Bugs/todo.txt
+++ b/Mods ChoGGi/Fix Bugs/todo.txt
@@ -1,7 +1,4 @@
-Empathy. 
+[b]Empathy stacking[/b]
 The current bug means once you have empathy sooner or later all your colonists will have 100 morale,
-because the stacking empathy bonus never goes away from each dome they visit,
-even if the empath dies.
-
-fix uneven terrain?
-Call whatever wasterock dumps use to "flatten" land after landscaping
+because the stacking empathy bonus never goes away from each dome they visit, even if the empath dies.
+(Thanks person whos name I forgot to keep around)
