--- a/Mods ChoGGi/More Keybinds/changes.txt
+++ b/Mods ChoGGi/More Keybinds/changes.txt
@@ -1,3 +1,7 @@
+v1.3
+Cycle through different levels of opacity for resource icons (Ctrl-I)
+Opacity Step Size: How much to cycle through on each press (default 25%).
+
 v1.2
 Added Quicksave/Quickload
 
