--- a/ChoGGi's Library/Locales/English.csv
+++ b/ChoGGi's Library/Locales/English.csv
@@ -1,6 +1,4 @@
 "ID", "Text", "Translation"
-302535920001669, ""
-302535920001670, ""
 302535920001671, ""
 302535920001672, ""
 302535920001673, ""
@@ -134,6 +132,8 @@
 302535920001642, "Hide Game Menu"
 302535920001643, "Hide Debug Menu"
 302535920001644, "Hide Help Menu"
+302535920001669, "Disable Dialog Escape"
+302535920001670, "Pressing Escape won't close dialog boxes."
 302535920001446, "Add Mod Options button to Game Options."
 302535920000044, "Ignore Persist Errors"
 302535920001302, "This prevents persist errors from spamming the log."
