Expanded Cheat Menu:
### Fixed:
- InstHarvest didn't always InstHarvest.

Mods:

Fix Bugs 3.4:
Changed "Turn Off Upgrades" back to on by default (it now remembers upgrade state between working states).

Remove Unwanted Colonists 2.0:
Fixed issue with homeless count, also did unemployed for good measure (thanks sir_lancealittle).
Checks for stuck hover animations (thanks sir_lancealittle).

github@choggi.org

--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,6 @@
+v3.4
+Changed "Turn Off Upgrades" back to on by default (it now remembers upgrade state between working states).
+
 v3.3
 Some buildings don't properly turn off their upgrades which causes them to keep their modifiers on (thanks Lord_Sicarious).
 The "fix" is turning off upgrades when a building is demolished, turned off, malfunctioned (might be annoying, mod option to keep it as is).
