Expanded Cheat Menu:
### Added:
- Mod option to reset ECM settings.

Lib:

- RGBtoColour() ignored A from RGBA

Mods:

Remove Unwanted Colonists 2.1:
Log spam from cleaning up invalid objs (thanks MasterJ94).

Save Rocket Cargo 0.5:
Possible Picard fix.

github@choggi.org

--- a/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
+++ b/Mods ChoGGi/Remove Unwanted Colonists/changes.txt
@@ -1,3 +1,6 @@
+v2.1
+Log spam from cleaning up invalid objs (thanks MasterJ94).
+
 v2.0
 Fixed issue with homeless count, also did unemployed for good measure (thanks sir_lancealittle).
 Checks for stuck hover animations (thanks sir_lancealittle).
