--- a/Mods ChoGGi/Notification Pause/changes.txt
+++ b/Mods ChoGGi/Notification Pause/changes.txt
@@ -1,3 +1,7 @@
+v1.8
+Checks if there's an id for notifications (there should be, but...).
+Might not have been properly checking ids for pausing.
+
 v1.7
 Too much pausing.
 
