Expanded Cheat Menu: ### Fixed: - Remove Building Limits works on underground wonders. - Menu>Mission>multiple menu items updated for picard.
Lib:

- Issue with Examine and certain tables.

Mods:

Change Lightmodel 0.5:
Added other lightmodels to list.

Change Rocket Skin 1.0:
Added mod option to skip the Pods/rover skins.

Colonist More Hover Info 0.3:
Added dome name (thanks hlechner).

Fix Bugs 3.9:
A couple issues from borked mods.

RC Transport Cheats 1.1:
Ignores certain underground wonder.
Added support for stockpiles from RC Miner.

Recon Center Change Cost:
Change cost (and storage) of the Recon Center scanning (see mod options to change).
You'll need to rebuild for the storage size, but the cost is immediate.

github@choggi.org

--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,6 @@
+v3.9
+A couple issues from borked mods.
+
 v3.8
 Move any underground dome prefabs (Underground Rare Anomaly "storybit") to underground city (instead of being stuck on surface).
 https://www.reddit.com/r/SurvivingMars/comments/1013afl/no_way_to_moveuse_underground_dome_prefabs/
