--- a/Mods ChoGGi/RC Transport Cheats/changes.txt
+++ b/Mods ChoGGi/RC Transport Cheats/changes.txt
@@ -1,3 +1,7 @@
+v1.1
+Ignores certain underground wonder.
+Added support for stockpiles from RC Miner.
+
 v1.0
 Added mod option to fill storage before unloading.
 
