Expanded Cheat Menu: ### Changed: - Re-added Remove Mysteries menu item.
Mods:

Construction Show Max Radius Range 2.0:
Doesn't show max range for tribby construction site (causes issues, thanks Denniss).

Fix Bugs 4.1:
Added a fix for Silva's Orion Heavy Rocket.
v4.0
Added my mods:
Fix FindDroneToRepair Log Spam
Fix Destroyed Tunnels Still Work

Mark Deposit Ground 1.2:
Changed textures around (I can add old textures as mod option).
Added mod option Always Show Deposits.

github@choggi.org

--- a/Mods ChoGGi/Construction Show Max Radius Range/changes.txt
+++ b/Mods ChoGGi/Construction Show Max Radius Range/changes.txt
@@ -1,3 +1,6 @@
+v2.0
+Doesn't show max range for tribby construction site (causes issues, thanks Denniss).
+
 v1.9
 Removed Set Max Radius, use (QoL) Triboelectric Scrubber defaults to max range instead
 
