--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,11 @@
+v4.1
+Added a fix for Silva's Orion Heavy Rocket.
+
+v4.0
+Added my mods:
+Fix FindDroneToRepair Log Spam
+Fix Destroyed Tunnels Still Work
+
 v3.9
 A couple issues from borked mods.
 
