Expanded Cheat Menu:
### Added:
- Lua Revision to main menu (change ShowLuaRevision in settings to disable it).

Mods:

Drone Controller Show Available Resources 1.2:
Issues with Elevator (thanks Murilo, El Fixador).

Fix Bugs 4.5:
The Philosopher's Stone Mystery doesn't update sector scanned count when paused.
v4.4
Added a fix for Horticulture Workshop not unlocking.

Fix Rover In Dome 0.7:
Also fixes Drones stuck in Ranches.

Rockets Auto Land 0.2:
Hopefully fixed an issue reported with dead passengers.
(X colonists dead in space while trying to reach Mars)

Selectable Cables Pipes 0.7:
ambiguously inherited log spam.

Spire Buildings Anywhere 0.2:
Moves spire frame to spire instead of whatever dome spire spot is closer.

Unlock All Achievements 0.2:
Added mod option to unlock all achievements ignoring DLC (default enabled).

Unlock All Storybit Options:
You can pick all options in dialogs (no commander limit).

github@choggi.org

--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,9 @@
+v4.5
+The Philosopher's Stone Mystery doesn't update sector scanned count when paused.
+
+v4.4
+Added a fix for Horticulture Workshop not unlocking.
+
 v4.3
 Re-added fix.
 
