--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,6 @@
+v4.6
+Uneven Terrain fix now fixes all maps on load, and mod option is enabled by default.
+
 v4.5
 The Philosopher's Stone Mystery doesn't update sector scanned count when paused.
 
