Expanded Cheat Menu:
- Added preview image of dialogs to readme.

Mods:

Add Rivals 0.2:
Workaround for LukeH's Meat and Booze.

All Rivals 0.5:
Fix for v0.4.
v0.4
Workaround for LukeH's Meat and Booze.

Mohole Limit Production 0.2:
Log spam.

More Keybinds 1.6:
Added Ctrl-* to quickly switch between maps (surface/underground/asteroids).

github@choggi.org

--- a/Mods ChoGGi/All Rivals/changes.txt
+++ b/Mods ChoGGi/All Rivals/changes.txt
@@ -1,3 +1,9 @@
+v0.5
+Fix for v0.4.
+
+v0.4
+Workaround for LukeH's Meat and Booze.
+
 v0.3
 Removed log spam: Trying to create new value hr.PlanetColony5Longitude
 
