Expanded Cheat Menu:
### Fixed:
- Log spam from CheatMoveRealm().

Lib:

### Examine:
- Clicking the @ for objects will select that obj.
- Game could crash when viewing preview of some descriptions.

Mods:

Fix Bugs 4.8:
Added fix for Future Contemporary Asset Pack when placing spires.
v4.7
Added "Fix Landscaping Freeze", I thought that was fixed in an update. I guess not.

Fix Dust Sickness:
There's a storybit that will give Biorobots (and other colonists) dust sickness.
It may not remove it from the colonists, and since Biorobots live forever then they have it forever.
This will remove the dust sickness trait from anyone that has it, use the mod option to disable it after loading your save.

Fix Unrepairable Attack Rovers:
Allows Attack Rovers to be repaired when you can't repair them.
I don't want to say too much as they're from one of the mysteries.
https://www.reddit.com/r/SurvivingMars/comments/12vkbrb/

Larger Depots 0.2:
Log spam.

Partial Terraforming:
Ancient terraforming device = all stats go to 40% (set to 40, not add 40).
Stop Blue skies, Cold waves/Toxic rains never stop.

Trade Pad Cheats:
Cheat(s) for Trade Pads. See Mod options to cheat.
Mod Options:
Min AI Export Amount: Rivals will not trade a resource if they have under this amount of said resource.

github@choggi.org

--- a/Mods ChoGGi/Fix Bugs/changes.txt
+++ b/Mods ChoGGi/Fix Bugs/changes.txt
@@ -1,3 +1,9 @@
+v4.8
+Added fix for Future Contemporary Asset Pack when placing spires.
+
+v4.7
+Added "Fix Landscaping Freeze", I thought that was fixed in an update. I guess not.
+
 v4.6
 Uneven Terrain fix now fixes all maps on load, and mod option is enabled by default.
 
